--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,18 +9,19 @@ environment:
   sdk: ">=2.18.4 <3.0.0"
 
 dependencies:
+  cupertino_icons: ^1.0.2
+  dio: ^4.0.6
+  figma_squircle: ^0.5.3
   flutter:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-
-  cupertino_icons: ^1.0.2
+  iconly: ^1.0.1
 
 dev_dependencies:
+  flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
-
-  flutter_lints: ^2.0.0
 
 flutter:
   uses-material-design: true
