--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
     sdk: flutter
   flutter_svg: ^1.1.6
   iconly: ^1.0.1
+  quick_actions: ^1.0.1
 
 dev_dependencies:
   flutter_lints: ^2.0.0
