--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,12 +18,15 @@ dependencies:
     sdk: flutter
   flutter_svg: ^1.1.6
   iconly: ^1.0.1
+  json_annotation: ^4.7.0
   quick_actions: ^1.0.1
 
 dev_dependencies:
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
+  json_serializable: ^6.5.4
+  build_runner: ^2.3.2
 
 flutter:
   uses-material-design: true
