--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,16 +17,18 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   flutter_svg: ^1.1.6
+  get_it: ^7.2.0
   iconly: ^1.0.1
+  intl: ^0.17.0
   json_annotation: ^4.7.0
   quick_actions: ^1.0.1
 
 dev_dependencies:
+  build_runner: ^2.3.2
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
   json_serializable: ^6.5.4
-  build_runner: ^2.3.2
 
 flutter:
   uses-material-design: true
