--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,6 @@ environment:
 
 dependencies:
   cupertino_icons: ^1.0.2
-  dio: ^4.0.6
   figma_squircle: ^0.5.3
   flutter:
     sdk: flutter
@@ -18,6 +17,7 @@ dependencies:
     sdk: flutter
   flutter_svg: ^1.1.6
   get_it: ^7.2.0
+  http: ^0.13.5
   iconly: ^1.0.1
   intl: ^0.17.0
   json_annotation: ^4.7.0
