--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   intl: ^0.17.0
   json_annotation: ^4.7.0
   quick_actions: ^1.0.1
+  share_plus: ^6.3.0
 
 dev_dependencies:
   build_runner: ^2.3.2
