--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,6 @@
     "quickfix.add.required": true,
     "quickfix.add.required.multi": true,
     "quickfix.create.constructorForFinalFields": true
-  }
+  },
+  "java.configuration.updateBuildConfiguration": "interactive"
 }
