--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,15 +16,19 @@ dependencies:
   flutter_local_notifications: ^12.0.4
   flutter_localizations:
     sdk: flutter
+  flutter_native_timezone: ^2.0.0
   flutter_svg: ^1.1.6
   get_it: ^7.2.0
   http: ^0.13.5
   iconly: ^1.0.1
   intl: ^0.17.0
   json_annotation: ^4.7.0
+  path_provider: ^2.0.11
   quick_actions: ^1.0.1
+  rxdart: ^0.27.7
   share_plus: ^6.3.0
   shared_preferences: ^2.0.15
+  timezone: ^0.9.0
 
 dev_dependencies:
   build_runner: ^2.3.2
@@ -32,6 +36,12 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   json_serializable: ^6.5.4
+  flutter_launcher_icons: ^0.11.0
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/landina-logo.png"
 
 flutter:
   uses-material-design: true
