--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
     sdk: flutter
   flutter_native_timezone: ^2.0.0
   flutter_svg: ^1.1.6
+  get: ^4.6.5
   get_it: ^7.2.0
   http: ^0.13.5
   iconly: ^1.0.1
@@ -32,11 +33,11 @@ dependencies:
 
 dev_dependencies:
   build_runner: ^2.3.2
+  flutter_launcher_icons: ^0.11.0
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
   json_serializable: ^6.5.4
-  flutter_launcher_icons: ^0.11.0
 
 flutter_icons:
   android: true
