--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,6 @@ dependencies:
     sdk: flutter
   flutter_native_timezone: ^2.0.0
   flutter_svg: ^1.1.6
-  get_it: ^7.2.0
   http: ^0.13.5
   iconly: ^1.0.1
   intl: ^0.17.0
@@ -29,6 +28,7 @@ dependencies:
   share_plus: ^6.3.0
   shared_preferences: ^2.0.15
   timezone: ^0.9.0
+  webview_flutter: ^3.0.4
 
 dev_dependencies:
   build_runner: ^2.3.2
