--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   share_plus: ^6.3.0
   shared_preferences: ^2.0.15
   timezone: ^0.9.0
+  url_launcher: ^6.1.7
   webview_flutter: ^3.0.4
 
 dev_dependencies:
