--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,16 @@
     "quickfix.add.required.multi": true,
     "quickfix.create.constructorForFinalFields": true
   },
-  "java.configuration.updateBuildConfiguration": "interactive"
+  "java.configuration.updateBuildConfiguration": "interactive",
+  "(\"@_[A-Z_]+\": {},)": {
+    "filterFileRegex": ".*\\.arb",
+    "decorations": [
+      {
+        "overviewRulerColor": "#d19a66",
+        "backgroundColor": "#d19a66",
+        "color": "#282c34",
+        "fontWeight": "bold"
+      }
+    ]
+  }
 }
