--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
   sdk: ">=2.18.4 <3.0.0"
 
 dependencies:
+  assorted_layout_widgets: ^7.0.0
   cupertino_icons: ^1.0.2
   figma_squircle: ^0.5.3
   flutter:
