--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,8 @@ dependencies:
     sdk: flutter
   flutter_native_timezone: ^2.0.0
   flutter_svg: ^1.1.6
+  get: ^4.6.5
+  get_storage: ^2.0.3
   http: ^0.13.5
   iconly: ^1.0.1
   intl: ^0.17.0
