--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,6 @@ environment:
 
 dependencies:
   assorted_layout_widgets: ^7.0.0
-  connectivity_plus: ^3.0.2
   cupertino_icons: ^1.0.2
   figma_squircle: ^0.5.3
   flutter:
@@ -25,12 +24,12 @@ dependencies:
   http: ^0.13.5
   iconly: ^1.0.1
   intl: ^0.17.0
+  ionicons: ^0.2.1
   json_annotation: ^4.7.0
   path_provider: ^2.0.11
   quick_actions: ^1.0.1
   rxdart: ^0.27.7
   share_plus: ^6.3.0
-  shared_preferences: ^2.0.15
   timezone: ^0.9.0
   url_launcher: ^6.1.7
   webview_flutter: ^3.0.4
