--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   timezone: ^0.9.0
   url_launcher: ^6.1.7
   webview_flutter: ^3.0.4
+  image_picker: ^0.8.6
 
 dev_dependencies:
   build_runner: ^2.3.2
