--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   url_launcher: ^6.1.7
   webview_flutter: ^3.0.4
   image_picker: ^0.8.6
+  instabug_flutter:
 
 dev_dependencies:
   build_runner: ^2.3.2
