--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   figma_squircle: ^0.5.3
   firebase_core: ^2.4.0
+  firebase_crashlytics: ^3.0.8
   flutter:
     sdk: flutter
   flutter_local_notifications: ^12.0.4
