--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,9 @@ dependencies:
   assorted_layout_widgets: ^7.0.0
   cupertino_icons: ^1.0.2
   figma_squircle: ^0.5.3
+  firebase: ^9.0.3
+  firebase_core: ^2.4.1
+  firebase_crashlytics: ^3.0.9
   flutter:
     sdk: flutter
   flutter_local_notifications: ^12.0.4
