--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,8 @@ environment:
   sdk: ">=2.18.4 <3.0.0"
 
 dependencies:
+  animated_theme_switcher: ^2.0.7
+  syncfusion_flutter_barcodes: ^20.4.42
   assorted_layout_widgets: ^7.0.0
   cupertino_icons: ^1.0.2
   figma_squircle: ^0.5.3
@@ -32,6 +34,8 @@ dependencies:
   share_plus: ^6.3.0
   url_launcher: ^6.1.7
   webview_flutter: ^3.0.4
+  liquid_pull_to_refresh: ^3.0.1
+  firebase_analytics: ^10.1.0
 
 dev_dependencies:
   build_runner: ^2.3.2
