--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   url_launcher: ^6.1.7
   webview_flutter: ^3.0.4
   liquid_pull_to_refresh: ^3.0.1
+  socket_io_client: ^2.0.1
 
 dev_dependencies:
   build_runner: ^2.3.2
