--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,8 +35,10 @@ dependencies:
   share_plus: ^6.3.0
   url_launcher: ^6.1.7
   webview_flutter: ^3.0.4
-  liquid_pull_to_refresh: ^3.0.1
+  custom_refresh_indicator: ^2.0.1
   socket_io_client: ^2.0.1
+  package_info_plus: ^3.0.2
+  uni_links: ^0.5.1
 
 dev_dependencies:
   build_runner: ^2.3.2
