--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -53,5 +53,18 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>CFBundleURLTypes</key>
+  <array>
+      <dict>
+          <key>CFBundleTypeRole</key>
+          <string>Editor</string>
+          <key>CFBundleURLName</key>
+          <string>unilinks.example.com</string>
+          <key>CFBundleURLSchemes</key>
+          <array>
+              <string>logrckt</string>
+          </array>
+      </dict>
+  </array>
 </dict>
 </plist>
