--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   socket_io_client: ^2.0.1
   package_info_plus: ^3.0.2
   uni_links: ^0.5.1
+  shimmer: ^2.0.0
+  intl_phone_number_input: ^0.7.2
 
 dev_dependencies:
   build_runner: ^2.3.2
