--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   package_info_plus: ^3.0.2
   shimmer: ^2.0.0
   intl_phone_number_input: ^0.7.2
+  flutter_svg: ^1.1.6
 
 dev_dependencies:
   build_runner: ^2.3.2
