--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,7 @@ dependencies:
   shimmer: ^2.0.0
   intl_phone_number_input: ^0.7.2
   flutter_svg: ^1.1.6
-  google_maps_flutter: ^2.2.3
+  # google_maps_flutter: ^2.2.3
 
 dev_dependencies:
   build_runner: ^2.3.2
