--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,7 @@ dependencies:
   firebase_analytics: ^10.1.0
   flutter:
     sdk: flutter
-  flutter_local_notifications: ^12.0.4
+  # flutter_local_notifications: ^12.0.4
   flutter_localizations:
     sdk: flutter
   get: ^4.6.5
@@ -41,6 +41,7 @@ dependencies:
   shimmer: ^2.0.0
   intl_phone_number_input: ^0.7.2
   flutter_svg: ^1.1.6
+  awesome_notifications: ^0.7.4+1
   # google_maps_flutter: ^2.2.3
 
 dev_dependencies:
