--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,40 +10,39 @@ environment:
 
 dependencies:
   animated_theme_switcher: ^2.0.7
-  syncfusion_flutter_barcodes: ^20.4.42
   assorted_layout_widgets: ^7.0.0
+  awesome_notifications: ^0.7.4+1
   cupertino_icons: ^1.0.2
-  fl_chart: ^0.55.2
+  custom_refresh_indicator: ^2.0.1
   figma_squircle: ^0.5.3
   firebase: ^9.0.3
+  firebase_analytics: ^10.1.0
   firebase_core: ^2.4.1
   firebase_crashlytics: ^3.0.9
-  firebase_analytics: ^10.1.0
+  fl_chart: ^0.55.2
   flutter:
     sdk: flutter
-  # flutter_local_notifications: ^12.0.4
   flutter_localizations:
     sdk: flutter
+  flutter_svg: ^1.1.6
   get: ^4.6.5
   get_storage: ^2.0.3
   http: ^0.13.5
   iconly: ^1.0.1
   image_picker: ^0.8.6
+  insta_like_button: ^0.1.1
   intl: ^0.17.0
+  intl_phone_number_input: ^0.7.2
   ionicons: ^0.2.1
   json_annotation: ^4.7.0
+  package_info_plus: ^3.0.2
   readmore: ^2.2.0
   share_plus: ^6.3.0
+  shimmer: ^2.0.0
+  socket_io_client: ^2.0.1
+  syncfusion_flutter_barcodes: ^20.4.42
   url_launcher: ^6.1.7
   webview_flutter: ^3.0.4
-  custom_refresh_indicator: ^2.0.1
-  socket_io_client: ^2.0.1
-  package_info_plus: ^3.0.2
-  shimmer: ^2.0.0
-  intl_phone_number_input: ^0.7.2
-  flutter_svg: ^1.1.6
-  awesome_notifications: ^0.7.4+1
-  # google_maps_flutter: ^2.2.3
 
 dev_dependencies:
   build_runner: ^2.3.2
