--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   firebase_analytics: ^10.1.0
   firebase_core: ^2.4.1
   firebase_crashlytics: ^3.0.9
+  firebase_dynamic_links: ^5.0.11
   fl_chart: ^0.55.2
   flutter:
     sdk: flutter
