--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   flutter_svg: ^1.1.6
   get: ^4.6.5
   get_storage: ^2.0.3
+  google_maps_flutter: ^2.2.3
   http: ^0.13.5
   iconly: ^1.0.1
   image_picker: ^0.8.6
